# Algomind_RAG_BOT

./: .env.example  .gitignore  .railwayignore  CNAME  Dockerfile  README.md  debug_ragas.py  debus_text.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh  test_bfs.py  test_chunker.py  test_embedding_store.py  test_evaluation.py  test_ingestion.py  test_retrieval.py
app/: config.py  dependencies.py  main.py
app/api/routes/: evaluate.py  health.py  ingest.py  query.py
app/api/schemas/: evaluate.py  health.py  ingest.py  query.py
app/core/: cache.py  chunker.py  langfuse_client.py  vector_store.py
app/services/: embedding_service.py  evaluation_service.py  ingestion_service.py  retrieval_service.py
ui/: algomind.html
