[project]
name = "naive-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "docling>=2.91.0",
    "einops>=0.8.2",
    "fastapi>=0.135.3",
    "fastembed>=0.8.0",
    "google-genai>=1.70.0",
    "groq>=1.2.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.0",
    "langfuse>=4.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.26",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]
